--- a/index.css
+++ b/index.css
@@ -3,11 +3,15 @@
     --spacing: 10px;
     --blur: 10px;
   }
+
   img {
     padding: var(--spacing);
     background: var(--base);
     filter: blur(var(--blur));
+    width: 800px;
+    height: 500px;
   }
+
   .hl {
     color: var(--base);
   }
@@ -22,9 +26,11 @@
     font-weight: 100;
     font-size: 50px;
   }
+
   .controls {
     margin-bottom: 50px;
   }
+
   input {
     width: 100px;
   }
