--- a/index.css
+++ b/index.css
@@ -15,12 +15,17 @@
   .hl {
     color: var(--base);
   }
+
+  h2 {
+    background-color: rgb(148, 140, 221);
+  }
   /*
     misc styles, nothing to do with CSS variables
   */
   body {
     text-align: center;
-    background: #193549;
+    background: url("media/backdrop.jpg");
+    background-size: cover;
     color: white;
     font-family: 'helvetica neue', sans-serif;
     font-weight: 100;
